# pbrt-subset

./: CMakeLists.txt  readme
src/accelerators/: bvh.cpp  bvh.h
src/cameras/: orthographic.cpp  orthographic.h
src/core/: api.cpp  api.h  camera.cpp  camera.h  film.cpp  film.h  filter.cpp  filter.h  geometry.cpp  geometry.h  integrator.cpp  integrator.h  interaction.cpp  interaction.h  light.cpp  light.h  main.h  material.cpp  material.h  memory.cpp  memory.h  parallel.cpp  parallel.h  parser.cpp  parser.h  primitive.cpp  primitive.h  reflection.cpp  reflection.h  rng.h  sampler.cpp  sampler.h  sampling.cpp  sampling.h  scene.cpp  scene.h  shape.cpp  shape.h  spectrum.cpp  spectrum.h  (+4 more)
src/filters/: box.cpp  box.h
src/integrators/: whitted.cpp  whitted.h
src/lights/: point.cpp  point.h
src/main/: main.cpp
src/materials/: matte.cpp  matte.h
src/samplers/: random.cpp  random.h
src/shapes/: sphere.cpp  sphere.h
src/textures/: constant.cpp  constant.h
